# zoom_video_mover

./: .gitignore  .policy-config.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_CHECKLIST.md  PROJECT_FEATURES.md  QUICKSTART.md  README.md  build.rs  deny.toml  design_policy.md  design_policy_compliance_report.md  development_process_and_deliverables_report.md  function_specifications.md  human_judgment_guidelines.md  implementation_policy.md  implementation_progress.csv  rdra_models.md  system_requirements_summary.md  test_coverage_matrix.csv  test_specifications.md  testing_policy.md  traceability_matrix.csv  traceability_relationship_matrix.md  zoom_api_specifications.md  分析.xmind
.claude/: settings.local.json
.github/workflows/: ci.yml
assets/fonts/: OFL.txt
docs/: INDEX.md  README.md  ROOT_DOCUMENTS_ANALYSIS.md  user_manual.md
docs/01-requirements/: README.md  system_requirements_summary.md
docs/04-quality-analysis/: README.md  comprehensive_policy_consistency_analysis_2025-08-09.md  overall_design_implementation_alignment_report.md  policy_consistency_issues.md  uml_design_consistency_report.md
docs/99-archive/: README.md
docs/analysis/: component_requirements_analysis_report.md  comprehensive_policy_consistency_analysis_2025-08-05.md  comprehensive_policy_consistency_report.md  design_implementation_consistency_report.md  final_comprehensive_consistency_verification.md  final_policy_consistency_analysis.md  policy_consistency_analysis.md  policy_consistency_issues.md  priority_action_items.md  uml_design_analysis_report.md  uml_design_consistency_report.md
docs/archive/: README.md
docs/archives/: README.md
docs/components/: README.md  component_traceability_matrix.md
docs/design/: change_impact_analysis_procedure.md  data_model_design.md  design_process_flow_diagram.md  error_handling_design.md  interface_design.md  performance_design.md  security_design.md  system_architecture.md
docs/guidelines/: pfd_creation_guidelines.md
docs/guides/: README.md  development_README.md
docs/implementation/: README.md
docs/policies/: OLD_README.md  README.md  component_based_development_process.md  component_management_policy.md  design_policy.md  development_checklist.md  functional_requirements.md  git_workflow.md  git_workflow_policy.md  human_judgment_guidelines.md  requirements_policy.md  rust_development.md  terminology_glossary.md  testing_policy.md  testing_strategy.md  testing_strategy_policy.md  traceability_management_policy.md
docs/requirements/: phase0_project_preparation.md  phase1_system_value.md  phase2_external_environment.md  phase3_system_boundary.md  phase4_system_internal.md  phase5_non_functional.md  project_features_detailed.md  rdra_analysis_models.md  rdra_sheets.md  requirements_policy.md  system_requirements.md  traceability_matrix.md
docs/rules/: README.md
plantuml/: 03_business_flow.puml  04_business_usecase.puml  05_requirements_specification.puml  06_system_architecture.puml
policies-template/: README.md
src/: errors.rs  gui.rs  lib.rs  lib_old.rs  main.rs  main_gui.rs  services.rs  services_impl.rs  windows_console.rs
temp_workspace/: README.md
tests/: gui_tests.rs  integration_tests.proptest-regressions  integration_tests.rs  property_tests.rs  property_tests_extended.rs  property_tests_integration.proptest-regressions  property_tests_integration.rs
tools/: README.md  notify_completion.ps1
(+202 files in other folders)
