[package]
name = "zoom_video_mover"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
build = "build.rs"

[lib]
name = "zoom_video_mover_lib"
path = "src/lib.rs"

[dependencies]
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
base64 = "0.21"
toml = "0.8"
dirs = "5.0"

# Windows dependencies removed to fix constant evaluation errors
# [target.'cfg(windows)'.dependencies]
# winapi = { version = "0.3", features = ["winuser", "shellapi"] }
