[package]
name = "zoom_video_mover"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
build = "build.rs"

[lib]
name = "zoom_video_mover_lib"
path = "src/lib.rs"

[dependencies]
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
base64 = "0.21"
toml = "0.8"
dirs = "5.0"
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
open = "5.0"

[[bin]]
name = "zoom_video_mover"
path = "src/main.rs"

[[bin]]
name = "zoom_video_mover_gui"
path = "src/main_gui.rs"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_Foundation"] }
