[package]
name = "zoom_video_mover"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
build = "build.rs"

[lib]
name = "zoom_video_mover_lib"
path = "src/lib.rs"

# Core dependencies aligned with design specifications
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
base64 = "0.21"
toml = "0.8"
dirs = "5.0"

# GUI dependencies (eGUI immediate-mode)
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }

# Error handling (thiserror policy compliance)
thiserror = "1.0"
anyhow = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.10"
log = "0.4"

# Utilities
open = "5.0"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Configuration validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
# Property-based testing framework
proptest = "1.4"
# QuickCheck-style testing
quickcheck = "1.0"
quickcheck_macros = "1.0"
# Arbitrary value generation for proptest
proptest-derive = "0.4"
# Temporary file/directory for testing
tempfile = "3.8"
# Date and time manipulation for testing
chrono = { version = "0.4", features = ["serde"] }
# Parameterized testing framework
rstest = "0.18"
# Mock HTTP server for testing
wiremock = "0.5"
# Serial test execution
serial_test = "3.0"
# Mock library for trait mocking
mockall = "0.11"

[[bin]]
name = "zoom_video_mover"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_Foundation"] }
